# upset

./: .gitignore  Makefile  Pipfile  README.md  pylintrc  pyproject.toml
src/upset/: lib.py  upset.py
src/upset/plugins/: apt_packages.py  commands.py  dnf_packages.py  paths.py  python.py  users.py  users_fedora.py
tests/: test_lib_unittest.py  test_plugins_apt_packages_unittest.py  test_plugins_paths_unittest.py  test_plugins_users_fedora_unittest.py  test_plugins_users_unittest.py  test_upset_unittest.py
